css/footer.css
/* Footer Style */
.footer {
    background: var(--color-background2);
    padding: 20px 0;
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.footer_columns {
    background-color: var(--color-background2);
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-wrap: wrap;
    max-width: 1200px;
    width: 100%;
    margin: 0 auto;
}

/* Reserve space for logo */
.footer_column.logo {
    text-align: center;
    min-width: 75px; /* Reserve space for logo width */
    min-height: 75px; /* Reserve space for logo height */
}

/* Ensure the logo image maintains the reserved space */
.footer_column.logo img {
    max-width: 75px;
    height: auto;
    min-width: 75px; /* Match the min-width of its container */
    min-height: 75px; /* Match the min-height of its container */
}

.footer_column {
    background-color: var(--color-background2);
    padding: 0 20px;
    margin-bottom: 20px;
    text-align: left;
    justify-content: center;
    align-items: center;
}

.footer_column h3 {
    font-size: 1rem;
    margin-bottom: 15px;
    color: var(--color-text);
    text-decoration: underline;
}

.footernav_page, .footernav_contact {
    list-style-type: none;
    padding: 0;
}

.footernav_page li, .footernav_contact li {
    margin-bottom: 8px;
}

.footernav_page a, .footernav_contact a {
    text-decoration: none;
    color: var(--color-text);
    transition: color 0.3s ease;
}

.footernav_page a:hover, .footernav_contact a:hover {
    color: var(--color-primary5);
}

.footernav_contact .bx {
    margin-right: 4px;
}

.footer_column.contact .footernav a {
    display: flex;
    align-items: center;
}

.footer-copyright {
    margin-top: 20px;
    width: 100%;
    justify-content: center;
}

.footer-copyright p {
    font-size: 12px;
    color: var(--color-text);
    text-align: left;
    padding-left: 150px;
}

/* Responsive Design */
@media (max-width: 766px) {
    .footer_columns {
        flex-direction: column;
        text-align: center;
    }

    .footer_column {
        justify-content: center;
        text-align: center;
        padding: 0;
        margin-bottom: 20px;
    }

    .footer_column.logo {
        order: 3;
    }

    .footer_column.pages {
        order: 1;
    }

    .footer_column.contact {
        order: 2;
    }

    .footer-copyright {
        order: 4;
        margin-top: 10px;
    }

    .footer-copyright p {
        text-align: left;
        padding-left: 200px;
    }
}

/* Popup container */
.popup {
    display: none; /* Hidden by default */
    position: fixed;
    z-index: 1; /* Sit on top */
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}

/* Popup content */
.popup-content {
    background-color: var(--color-background1);
    margin: 15% auto;
    padding: 20px;
    border: 1px solid #888;
    width: 80%; /* Could be more or less, depending on screen size */
    max-width: 500px; /* Optional: limit the maximum width */
    border-radius: 8px; /* Optional: rounded corners */
    position: relative; /* Required for absolute positioning of close button */
}

/* The Close Button */
.close {
    color: var(--color-primary4); /* Updated color */
    float: right;
    font-size: 28px;
    font-weight: bold;
}

/* The Close Button Hover/Focus */
.close:hover,
.close:focus {
    color: var(--color-primary3);
    text-decoration: none;
    cursor: pointer;
}

/* Continue Link */
.popup-content a {
    display: inline-block;
    color: var(--color-primary4); 
    font-size: 18px;
    font-weight: bold;
    text-decoration: none;
    padding: 10px 15px;
    border-radius: 5px; /* Rounded corners */
    transition: background-color 0.3s, color 0.3s; 
    margin-top: 10px;
}

/* Continue Link Hover */
.popup-content a:hover,
.popup-content a:focus {
    text-decoration: underline;
}

.popup-content strong {
    color: var(--color-secondary2);
}

